--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodebb-plugin-featured-threads",
   "version": "0.1.3",
   "nbbpm": {
-    "compatibility": "^0.8.2 || ^0.9.0 || ^1.0.0"
+    "compatibility": "^1.0.0"
   },
   "description": "Featured Threads & Widget for NodeBB",
   "main": "library.js",
