refactor: use listAppend with array
use core eslint
use includes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodebb-plugin-featured-threads",
   "version": "1.0.0",
   "nbbpm": {
-    "compatibility": "^1.16.0"
+    "compatibility": "^1.17.0"
   },
   "description": "Featured Threads & Widget for NodeBB",
   "main": "library.js",
@@ -34,9 +34,9 @@
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-angular": "11.0.0",
-    "eslint": "7.19.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "2.22.1",
+    "eslint": "8.10.0",
+    "eslint-config-nodebb": "0.1.1",
+    "eslint-plugin-import": "2.25.4",
     "husky": "5.0.9",
     "lint-staged": "10.5.4"
   },
